# mockpipe

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: read_write.rs
examples/: loopback.rs  pair_with_threads.rs  pair_with_timeout.rs
src/: lib.rs
